#274 Part of code clean up for when required things aren't in xml: - Fixed problem in Decision Tree module if no steps added or no answers added to a question - Also fixed bugs in with overviews not showing correctly and errors if no answer to match slider question value

--- a/modules/decision/parent_templates/decision/common/css/styles.css
+++ b/modules/decision/parent_templates/decision/common/css/styles.css
@@ -376,10 +376,6 @@ img.sectionIcon {
 	background-color:	white;
 }
 
-.error {
-	color:	red;
-}
-
 .hint {
 	color:			red;
 	font-weight:	bold;
@@ -391,4 +387,9 @@ img.sectionIcon {
 
 .floatL {
 	float:	left;
+}
+
+.alert {
+	font-weight:	bold;
+	color:			red;
 }
